<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinicio"
    tools:context=".Main2Activity_NivelFacil">

    <TextView
        android:id="@+id/textViewNombreP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/nombreJuego"
        android:textColor="#FFFB89"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNivelP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/nivelJuego"
        android:textColor="#FFFB89"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Tiempo"
        android:textColor="#FFFB89"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEjercicio" />

    <TableLayout
        android:layout_width="349dp"
        android:layout_height="169dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTiempo"
        app:layout_constraintVertical_bias="0.428">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRespuesta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="#855E0D0D"
                android:hint="@string/respuesta"
                android:paddingLeft="20sp"
                android:paddingTop="8sp"
                android:paddingRight="20sp"
                android:textColor="#FFFB89"
                android:textColorHint="#7CFFFB89"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Limpiar"
                android:text="@string/btnx"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_span="2"
                android:background="#855E0D0D"
                android:onClick="ValidarRespuesta"
                android:text="@string/btnOk"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn1"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn2"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn3"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn4"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn5"
                android:textColor="#FFFB89"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn6"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn7"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn8"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn9"
                android:textColor="#FFFB89"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="#855E0D0D"
                android:onClick="Escribir"
                android:text="@string/btn0"
                android:textColor="#FFFB89"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageViewEjercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntajeP"
        app:srcCompat="@drawable/f1" />

    <TextView
        android:id="@+id/textViewPuntajeP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/puntajeJuego"
        android:textColor="#FFFB89"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAyuda"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="44dp"
        android:background="@drawable/actualizar"
        android:onClick="Ayudar"
        android:text="@string/ayuda"
        android:textColor="#FFFB89"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/textViewTiempo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEjercicio" />
</androidx.constraintlayout.widget.ConstraintLayout>