<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinicio"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="103dp"
        android:contentDescription="@string/app_name"
        android:verticalScrollbarPosition="defaultPosition"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="345dp"
        android:background="#5EFFFFFF"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="5"
        android:paddingStart="100dp"
        android:paddingLeft="100dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:textColor="#F1EA13"
        android:textColorHint="#FFFB89"
        android:textSize="30sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="178dp"
        android:background="#855E0D0D"
        android:onClick="Jugar"
        android:text="@string/jugar"
        android:textColor="#FFFB89"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="107dp"
        android:background="#855E0D0D"
        android:onClick="Ranking"
        android:text="@string/ranking"
        android:textColor="#FFFB89"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginBottom="257dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#805E0D0D"
            android:checked="true"
            android:text="@string/facil"
            android:textColor="#FFFB89"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbMedio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#805E0D0D"
            android:text="@string/medio"
            android:textColor="#FFFB89"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbDificil"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#805E0D0D"
            android:text="@string/dificil"
            android:textColor="#FFFB89"
            android:textSize="18sp" />
    </RadioGroup>
</RelativeLayout>